--- a/index.html
+++ b/index.html
@@ -14,21 +14,32 @@
 
     <script>
         document.getElementById("contactForm").addEventListener("submit", async function(event) {
-            event.preventDefault();
+            event.preventDefault(); // Prevent the default form submission
 
             let message = document.getElementById("userInput").value;
+            if (!message.trim()) {
+                alert("Please enter a message.");
+                return;
+            }
 
-            let response = await fetch("https://telegram-form-final.philip20grujic.workers.dev/", { // Replace this with your Cloudflare URL
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ message })
-            });
+            try {
+                let response = await fetch("https://telegram-form-final.philip20grujic.workers.dev/", { // Your Cloudflare Worker URL
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/json"
+                    },
+                    body: JSON.stringify({ message })
+                });
 
-            let result = await response.json();
-            if (result.success) {
-                alert("Message sent!");
-            } else {
-                alert("Error sending message.");
+                let result = await response.json();
+                if (result.success) {
+                    alert("Message sent!");
+                } else {
+                    alert("Error sending message.");
+                }
+            } catch (error) {
+                console.error("Error:", error);
+                alert("Something went wrong. Please try again.");
             }
         });
     </script>
