--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <div id="messageStatus"></div> <!-- Status message will appear here -->
 
+    <!-- Ensure this part is inside a <script> tag -->
     <script>
         document.getElementById("contactForm").addEventListener("submit", async function(event) {
             event.preventDefault(); // Prevent the default form submission
